--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <link href="https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 
   <title>3年A組 ー今から皆さんは観客ですー</title>
 </head>
