--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <meta name="description" content="筑駒文化祭 2020 3年A組 デコ 「3年A組 ー今から皆さんは観客ですー」 公式サイト" />
   <meta property="og:description" content="筑駒文化祭 2020 3年A組 デコ 「3年A組 ー今から皆さんは観客ですー」 公式サイト" />
   <meta property="og:title" content="3年A組 ー今から皆さんは観客ですー" />
-  <meta property="og:image" content="%PUBLIC_URL%/assets/thumbnail.webp" />
+  <meta property="og:image" content="https://tkfes2020-3a.web.app/assets/thumbnail.webp" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:site" content="@3A2020_official" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/assets/logo192.png" />
